--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Velkommen til AffaldsGuiden | Din nøgle til korrekt affaldssortering! Bestil din nye affaldsbeholder og opdag en enklere vej til en grønnere livsstil.">
     <title>Vite + React</title>
   </head>
   <body>
