--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Velkommen til AffaldsGuiden | Din nøgle til korrekt affaldssortering! Bestil din nye affaldsbeholder og opdag en enklere vej til en grønnere livsstil.">
-    <title>Vite + React</title>
+    <title>affaldsguiden</title>
   </head>
   <body>
     <div id="root"></div>
