--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/Logo.png" />
+    <link rel="icon"  type="image/svg+xml" href="/Logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Velkommen til AffaldsGuiden | Din nøgle til korrekt affaldssortering! Bestil din nye affaldsbeholder og opdag en enklere vej til en grønnere livsstil.">
     <title>affaldsguiden</title>
